--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
         .schedule-title { cursor: default; }
         .schedule-title:hover { background-color: #f7f7f7; }
 
-
         header h1 {
             font-size: 2rem;
             color: #0a66c2;
@@ -311,6 +310,23 @@
         .retry-btn:hover {
             background-color: #d8dadf;
         }
+
+        .app-footer {
+            text-align: center;
+            margin-top: 2.5rem;
+            padding-top: 1.5rem;
+            border-top: 1px solid #dce1e6;
+            font-size: 0.9rem;
+            color: #65676b;
+        }
+        .app-footer a {
+            color: #0a66c2;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        .app-footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -351,6 +367,15 @@
                 </div>
             </div>
         </main>
+        
+        <footer class="app-footer">
+            <p>&copy; 2025 Project Amplify. All Rights Reserved.</p>
+            <p>
+                <a href="#">About</a> |
+                <a href="#">Terms of Service</a> |
+                <a href="mailto:contact@projectamplify.com">Contact Us</a>
+            </p>
+        </footer>
     </div>
 
     <!-- AUTHENTICATION MODAL -->
@@ -455,7 +480,7 @@
             apiKey: "AIzaSyBbR8i9p3OdSFqgFznTrcrSAdRoZd6JCyM",
             authDomain: "project-amplify-f3d8b.firebaseapp.com",
             projectId: "project-amplify-f3d8b",
-            storageBucket: "project-amplify-f3d8b.appspot.com",
+            storageBucket: "project-amplify-f3d8b.firebasestorage.app",
             messagingSenderId: "944323887163",
             appId: "1:944323887163:web:dca950ea7032ae776adc1e"
         };
