minor bug fix for payment gatway

--- a/index.html
+++ b/index.html
@@ -837,8 +837,9 @@
     </script>
 
     <!-- Hidden input to hold Razorpay Key ID -->
-    <input type="hidden" id="razorpay-key-id" value="YOUR_RAZORPAY_KEY_ID">
+    <input type="hidden" id="razorpay-key-id" value="rzp_test_RV76TlaBfMsY85">
 
 </body>
 </html>
+
 
