--- a/index.html
+++ b/index.html
@@ -68,14 +68,43 @@
             display: none;
             position: absolute;
             right: 0;
-            top: calc(100% + 10px);
-            background-color: var(--container-bg);
-            min-width: 180px;
+            top: 95%; /* Adjusted for hover fix */
+            padding-top: 15px; /* Adjusted for hover fix */
+            background-color: transparent; /* Makes the gap hoverable */
+            min-width: 220px; /* Wider for user info */
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
-            z-index: 1;
+            z-index: -1; /* Sits behind the button initially */
+            border-radius: 8px;
+        }
+        .dropdown-content-inner {
+            background-color: var(--container-bg);
             border-radius: 8px;
             overflow: hidden;
             border: 1px solid var(--border-color);
+        }
+        .dropdown-header {
+            padding: 12px 16px;
+            border-bottom: 1px solid var(--border-color);
+        }
+        .dropdown-username {
+            font-weight: bold;
+            color: var(--text-primary);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .dropdown-status {
+            font-size: 0.8rem;
+            padding: 0.1rem 0.5rem;
+            border-radius: 1rem;
+            color: var(--text-secondary);
+            background-color: #eef3f8;
+            display: inline-block;
+            margin-top: 4px;
+        }
+        .dropdown-status.premium {
+            background-color: #0d824d;
+            color: white;
         }
         .dropdown-content a {
             color: var(--text-primary);
@@ -363,9 +392,15 @@
             <span class="user-badge">Premium</span>
             <button id="cta-button" class="cta-button">Sign Up</button>
             <div id="account-dropdown" class="dropdown-content">
-                <a href="#" id="historyBtn-dropdown">History</a>
-                <a href="#" id="automationBtn-dropdown">Automation</a>
-                <a href="#" id="signOutBtn-dropdown">Sign Out</a>
+                <div class="dropdown-content-inner">
+                    <div class="dropdown-header">
+                        <div id="dropdown-username" class="dropdown-username"></div>
+                        <div id="dropdown-status" class="dropdown-status"></div>
+                    </div>
+                    <a href="#" id="historyBtn-dropdown">History</a>
+                    <a href="#" id="automationBtn-dropdown">Automation</a>
+                    <a href="#" id="signOutBtn-dropdown">Sign Out</a>
+                </div>
             </div>
         </div>
     </header>
@@ -508,7 +543,7 @@
            storageBucket: "project-amplify-f3d8b.firebasestorage.app",
            messagingSenderId: "944323887163",
            appId: "1:944323887163:web:dca950ea7032ae776adc1e"
-        };
+        }
         
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
@@ -541,6 +576,9 @@
         const automationTime = document.getElementById('automationTime');
         const subscribeBtn = document.getElementById('subscribeBtn');
         const userBadge = document.querySelector('.user-badge');
+        
+        const dropdownUsername = document.getElementById('dropdown-username');
+        const dropdownStatus = document.getElementById('dropdown-status');
 
         let isPremiumUser = false;
 
@@ -548,13 +586,20 @@
         onAuthStateChanged(auth, async (user) => {
             if (user) {
                 ctaButton.innerText = "My Account";
+                dropdownUsername.innerText = user.displayName || user.email;
+
                 const userRef = doc(db, "users", user.uid);
                 const docSnap = await getDoc(userRef);
                 isPremiumUser = docSnap.exists() && docSnap.data().isPremium;
+
                 if(isPremiumUser) {
                     userBadge.style.display = 'inline-block';
+                    dropdownStatus.innerText = 'Premium';
+                    dropdownStatus.classList.add('premium');
                 } else {
                     userBadge.style.display = 'none';
+                    dropdownStatus.innerText = 'Free User';
+                    dropdownStatus.classList.remove('premium');
                 }
             } else {
                 ctaButton.innerText = "Sign Up";
@@ -744,6 +789,8 @@
                                 premiumModal.style.display = 'none';
                                 isPremiumUser = true;
                                 userBadge.style.display = 'inline-block';
+                                dropdownStatus.innerText = 'Premium';
+                                dropdownStatus.classList.add('premium');
                             } else {
                                 throw new Error("Payment verification failed.");
                             }
